# dreamsense-ai

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
config/: dev.properties  prod.properties  staging.properties
docker/: Dockerfile
src/dreams/: app.py  cli.py  config.py  logging_config.py
src/dreams/api/: routes.py
src/dreams/models/: dream_models.py
src/dreams/services/: embedding_service.py  hf_client.py  hf_client_local.py  hf_client_remote.py  nlp_pipeline.py  physio_service.py
src/dreams/storage/: db.py  file_store.py
src/dreams/utils/: metrics.py  timer.py
tests/: conftest.py
tests/integration/: test_cli_pipeline.py
tests/unit/: test_config.py  test_hf_client_local.py  test_logging.py  test_nlp_pipeline.py
